Bug 1201969 - pause element only when start playing. r=baku